specrtl/asgn4-srtl-arm-md/SRTL-2.0/source/srtl-parser.output
Terminals unused in grammar

   MODE_ATTR
   CODE_ATTR
   rid
   aid
   HEX


State 251 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce


Grammar

    0 $accept: Pattern_List "end of file"

    1 Pattern_List: Pattern_List Pattern
    2             | Pattern
    3             | error '}'

    4 Pattern: Abstract_Pattern
    5        | Concrete_Pattern
    6        | List_Pattern
    7        | CMD_SPEC_BODY
    8        | DDDD

    9 Abstract_Pattern: ABSTRACT Abstract_Pattern_Name Abstract_Rtl_Spec

   10 Abstract_Pattern_Name: ID

   11 $@1: %empty

   12 Abstract_Rtl_Spec: EXTENDS Base_Name $@1 '{' Abstract_Extends_Body '}'

   13 $@2: %empty

   14 Abstract_Rtl_Spec: OVERRIDES Base_Name $@2 '{' Abstract_Overrides_Body '}'

   15 Abstract_Extends_Body: Abstract_Extends_Body Stmt
   16                      | Stmt

   17 Abstract_Overrides_Body: ID

   18 Concrete_Pattern: CONCRETE Concrete_Pattern_Name_Qualifier Concrete_Rtl_Spec
   19                 | CONCRETE Concrete_Pattern_Name_Qualifier_C Concrete_Rtl_Spec_C
   20                 | CONCRETE Concrete_Pattern_Name_Qualifier_S Concrete_Rtl_Spec_S
   21                 | CONCRETE Concrete_Pattern_Name_List '.' REG_CONS '{' Concrete_Inst_Stmt_List '}'

   22 Concrete_Pattern_Name_Qualifier_S: Concrete_Pattern_Name_List '.' CONS
   23                                  | Concrete_Pattern_Name_List '.' ATTR
   24                                  | Concrete_Pattern_Name_List '.' MEM_CONS
   25                                  | Concrete_Pattern_Name_List '.' ADD_CONS

   26 Concrete_Pattern_Name_Qualifier: Concrete_Pattern_Name_List '.' INSN
   27                                | Concrete_Pattern_Name_List '.' EXP
   28                                | Concrete_Pattern_Name_List '.' INSN_RESERV
   29                                | Concrete_Pattern_Name_List '.' PREDICATE
   30                                | Concrete_Pattern_Name_List '.' SPECIAL_PREDICATE

   31 Concrete_Pattern_Name_Qualifier_C: '.' PEEP2
   32                                  | '.' SPLIT
   33                                  | Concrete_Pattern_Name_List '.' INSN_SPLIT

   34 Concrete_Rtl_Spec_S: INSTANTIATES Concrete_Pattern_Name_List Concrete_Instantiates_Body

   35 Concrete_Rtl_Spec: INSTANTIATES Concrete_Pattern_Name_List Concrete_Instantiates_Body CMD_SPEC_BODY
   36                  | OVERRIDES Concrete_Pattern_Name_List '.' INSN Concrete_Overrides_Body CMD_SPEC_BODY
   37                  | OVERRIDES Concrete_Pattern_Name_List '.' EXP Concrete_Overrides_Body CMD_SPEC_BODY

   38 Concrete_Rtl_Spec_C: INSTANTIATES '.' IN Concrete_Pattern_Name_List Concrete_Instantiates_Body_C
   39                    | OVERRIDES '.' IN Concrete_Pattern_Name_List Concrete_Instantiates_Body_C

   40 $@3: %empty

   41 Concrete_Instantiates_Body_C: Concrete_Instantiates_Body CMD_SPEC '.' IN CMD_SPEC_BODY $@3 Concrete_Instantiates_Body_C2

   42 Concrete_Instantiates_Body_C2: INSTANTIATES '.' OUT Concrete_Pattern_Name_List Concrete_Instantiates_Body_Out CMD_SPEC '.' OUT CMD_SPEC_BODY
   43                              | INSTANTIATES '.' OUT Concrete_Pattern_Name_List Concrete_Instantiates_Body_Out
   44                              | OVERRIDES '.' OUT Concrete_Pattern_Name_List Concrete_Overrides_Body_Out CMD_SPEC '.' OUT CMD_SPEC_BODY

   45 Concrete_Instantiates_Body: '{' Concrete_Instantiates_Body_Inner '}'

   46 Concrete_Overrides_Body: '{' Concrete_Overrides_Body_Inner '}'

   47 Concrete_Instantiates_Body_Inner: ROOT '(' Operands ')' ';' Concrete_Inst_Stmt_List
   48                                 | ROOT '(' Operands ')' ';'
   49                                 | Concrete_Inst_Stmt_List

   50 Quoted_Id_List: Quoted_Id_List ',' Quoted_Id
   51               | Quoted_Id

   52 Concrete_Overrides_Body_Inner: Concrete_Inst_Stmt_List

   53 Concrete_Instantiates_Body_Out: '{' Concrete_Instantiates_Body_Inner_Out '}'

   54 Concrete_Overrides_Body_Out: '{' Concrete_Overrides_Body_Inner_Out '}'

   55 Concrete_Instantiates_Body_Inner_Out: ROOT '(' Operands ')' ';' Concrete_Inst_Stmt_List
   56                                     | ROOT '(' Operands ')' ';'

   57 Concrete_Overrides_Body_Inner_Out: Concrete_Inst_Stmt_List

   58 Concrete_Inst_Stmt_List: Concrete_Inst_Stmt_List Mode_Stmt
   59                        | Mode_Stmt

   60 Stmt: ROOT Operand_Access ASSIGN Pattern_Name ';'

   61 Mode_Stmt: ROOT Attr_Access ASSIGN Predicate_Or_Mode ';'
   62          | ROOT Attr_Access ASSIGN Quoted_Id ';'
   63          | ROOT Attr_Access ASSIGN '<' Predicate_Or_Mode '>' ';'
   64          | ROOT Attr_Access ASSIGN CONST_INT ':' INT ';'
   65          | ROOT Attr_Access ASSIGN ID '(' ID ':' FIXED_REG ')' ';'
   66          | ROOT Operand_Access ASSIGN Predicate_Or_Mode_List ':' Predicate_Or_Mode_List ':' Quoted_Id ';'
   67          | ROOT Operand_Access ASSIGN INT '=' Predicate_Or_Mode_List ':' Predicate_Or_Mode_List ':' Quoted_Id ';'
   68          | LATENCY ASSIGN INT ';'
   69          | LOV ASSIGN Quoted_Id ';'
   70          | DOCSTRING ASSIGN Quoted_Id ';'
   71          | REGCLASS ASSIGN Quoted_Id ';'
   72          | ALLCONSTRAINTS ASSIGN '(' Quoted_Id_List ')' ';'
   73          | ID '-' '>' ID ';'

   74 Attr_Access: '.' ID
   75            | Operand_Access '.' ID
   76            | Operand_Access '.' PREDICATE

   77 Operand_Access: Operand_Access '.' INT
   78               | '.' INT

   79 Operands: Operands ',' '(' Operands ')'
   80         | '(' Operands ')'
   81         | Operands ',' Operand
   82         | Operand

   83 Operand: Predicate_Or_Mode_List ':' Predicate_Or_Mode_List ':' Constraint
   84        | INT '=' Predicate_Or_Mode_List ':' Predicate_Or_Mode_List ':' Constraint
   85        | DUPLICATE INT
   86        | Predicate_Or_Mode_List ':' Constraint
   87        | ATTR ':' Constraint
   88        | INT '=' Predicate_Or_Mode_List ':' Constraint
   89        | INT '=' Predicate_Or_Mode_List
   90        | INT
   91        | Fixed_Reg_Or_Const

   92 Fixed_Reg_Or_Const: ID '(' Predicate_Or_Mode_List ':' FIXED_REG ')'
   93                   | ID '(' Predicate_Or_Mode_List ':' INT ')'
   94                   | FIXED_REG
   95                   | ID
   96                   | CONST_INT ':' INT
   97                   | CONST_INT ':' INT ':' ID
   98                   | '<' INT '>'
   99                   | '<' ID '>'

  100 Constraint: Quoted_Id

  101 Predicate_Or_Mode_List: Predicate_Or_Mode_List Predicate_Or_Mode_With_Brackets
  102                       | Predicate_Or_Mode_List Predicate_Or_Mode
  103                       | Predicate_Or_Mode_With_Brackets
  104                       | Predicate_Or_Mode

  105 Predicate_Or_Mode_With_Brackets: '<' Predicate_Or_Mode '>'

  106 Predicate_Or_Mode: INT
  107                  | ID

  108 Quoted_Id: QUOTED_ID

  109 Concrete_Pattern_Name_List: Concrete_Pattern_Name_List Concrete_Pattern_Name_With_Brackets
  110                           | Concrete_Pattern_Name_List Concrete_Pattern_Name
  111                           | Concrete_Pattern_Name_With_Brackets
  112                           | Concrete_Pattern_Name

  113 Concrete_Pattern_Name_With_Brackets: '<' Concrete_Pattern_Name '>'
  114                                    | '<' Concrete_Pattern_Name ':' Concrete_Pattern_Name '>'

  115 Concrete_Pattern_Name: ID
  116                      | INT
  117                      | '*'
  118                      | ':'
  119                      | '_'

  120 Base_Name: ID

  121 Pattern_Name: ID

  122 List_Pattern: LIST QUOTED_ID '.' AUTOMATON
  123             | LIST QUOTED_ID '.' C_ENUM OBRACE ListEntries CBRACE
  124             | LIST INT '.' BYPASS QIDList
  125             | LIST QUOTED_ID '.' CPU_UNIT QUOTED_ID
  126             | LIST QUOTED_ID '.' RESERVATION QUOTED_ID
  127             | LIST QUOTED_ID '.' RESERVATION '"' PipedId '"'
  128             | LIST NONAME '.' CONSTANTS OBRACE ListPID CBRACE
  129             | LIST NONAME '.' ASM_ATTR OBRACE ListAsmEntries CBRACE
  130             | LIST ID '.' Code_Mode_Iter OBRACE ListEntries CBRACE
  131             | LIST ID '.' Code_Mode_Attr OBRACE ListQEntries CBRACE

  132 Code_Mode_Iter: C_ITER
  133               | M_ITER

  134 Code_Mode_Attr: C_ATTR
  135               | M_ATTR

  136 ListAsmEntries: ListAsmEntries ',' AsmEntry
  137               | AsmEntry

  138 AsmEntry: '(' SET_ATTR ',' Quoted_Id ',' QUOTED_ID ')'

  139 ListPID: ListPID ',' '(' IEntryPair ')'
  140        | '(' IEntryPair ')'

  141 ListEntries: ListEntries ',' SEntry
  142            | SEntry
  143            | ListEntries ',' '(' SQEntryPair ')'
  144            | '(' SQEntryPair ')'

  145 ListQEntries: ListQEntries ',' '(' SQEntryPair ')'
  146             | ListQEntries ',' SEntry
  147             | '(' SQEntryPair ')'
  148             | SEntry

  149 SQEntryPair: ID ',' Quoted_Id

  150 IEntryPair: Id_Reg ',' ID
  151           | Id_Reg ',' INT
  152           | Id_Reg ',' INT ID

  153 Id_Reg: ID
  154       | FIXED_REG

  155 QIDList: QUOTED_ID
  156        | QIDList QUOTED_ID

  157 SEntry: ID

  158 PipedId: ID PIPE PipedId
  159        | '(' PipedId ')'
  160        | ID PLUS PipedId
  161        | ID
  162        | QUOTED_ID
  163        | ID ',' PipedId


Terminals, with rules where they appear

"end of file" (0) 0
'"' (34) 127
'(' (40) 47 48 55 56 65 72 79 80 92 93 138 139 140 143 144 145 147
    159
')' (41) 47 48 55 56 65 72 79 80 92 93 138 139 140 143 144 145 147
    159
'*' (42) 117
',' (44) 50 79 81 136 138 139 141 143 145 146 149 150 151 152 163
'-' (45) 73
'.' (46) 21 22 23 24 25 26 27 28 29 30 31 32 33 36 37 38 39 41 42 43
    44 74 75 76 77 78 122 123 124 125 126 127 128 129 130 131
':' (58) 64 65 66 67 83 84 86 87 88 92 93 96 97 114 118
';' (59) 47 48 55 56 60 61 62 63 64 65 66 67 68 69 70 71 72 73
'<' (60) 63 98 99 105 113 114
'=' (61) 67 84 88 89
'>' (62) 63 73 98 99 105 113 114
'_' (95) 119
'{' (123) 12 14 21 45 46 53 54
'}' (125) 3 12 14 21 45 46 53 54
error (256) 3
CONCRETE (258) 18 19 20 21
ABSTRACT (259) 9
EXTENDS (260) 12
OVERRIDES (261) 14 36 37 39 44
ROOT (262) 47 48 55 56 60 61 62 63 64 65 66 67
INSN (263) 26 36
EXP (264) 27 37
PEEP2 (265) 31
SPLIT (266) 32
INSN_SPLIT (267) 33
INSN_RESERV (268) 28
PREDICATE (269) 29 76
SPECIAL_PREDICATE (270) 30
ATTR (271) 23 87
ASM_ATTR (272) 129
CONS (273) 22
REG_CONS (274) 21
MEM_CONS (275) 24
ADD_CONS (276) 25
BYPASS (277) 124
IN (278) 38 39 41
OUT (279) 42 43 44
LATENCY (280) 68
LOV (281) 69
DOCSTRING (282) 70
REGCLASS (283) 71
ALLCONSTRAINTS (284) 72
INSTANTIATES (285) 34 35 38 42 43
CONST_INT (286) 64 96 97
DUPLICATE (287) 85
FIXED_REG (288) 65 92 94 154
CMD_SPEC (289) 41 42 44
CMD_SPEC_BODY (290) 7 35 36 37 41 42 44
NONAME (291) 128 129
MODE_ATTR (292)
SET_ATTR (293) 138
AUTOMATON (294) 122
CODE_ATTR (295)
CONSTANTS (296) 128
CPU_UNIT (297) 125
LIST (298) 122 123 124 125 126 127 128 129 130 131
C_ITER (299) 132
C_ATTR (300) 134
M_ITER (301) 133
M_ATTR (302) 135
RESERVATION (303) 126 127
C_ENUM (304) 123
CBRACE (305) 123 128 129 130 131
OBRACE (306) 123 128 129 130 131
PIPE (307) 158
PLUS (308) 160
ASSIGN (309) 60 61 62 63 64 65 66 67 68 69 70 71 72
DDDD (310) 8
ID (311) 10 17 65 73 74 75 92 93 95 97 99 107 115 120 121 130 131 149
    150 152 153 157 158 160 161 163
QUOTED_ID (312) 108 122 123 125 126 127 138 155 156 162
INT (313) 64 67 68 77 78 84 85 88 89 90 93 96 97 98 106 116 124 151
    152
rid (314)
aid (315)
HEX (316)


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
Pattern_List (78)
    on left: 1 2 3, on right: 0 1
Pattern (79)
    on left: 4 5 6 7 8, on right: 1 2
Abstract_Pattern (80)
    on left: 9, on right: 4
Abstract_Pattern_Name (81)
    on left: 10, on right: 9
Abstract_Rtl_Spec (82)
    on left: 12 14, on right: 9
$@1 (83)
    on left: 11, on right: 12
$@2 (84)
    on left: 13, on right: 14
Abstract_Extends_Body (85)
    on left: 15 16, on right: 12 15
Abstract_Overrides_Body (86)
    on left: 17, on right: 14
Concrete_Pattern (87)
    on left: 18 19 20 21, on right: 5
Concrete_Pattern_Name_Qualifier_S (88)
    on left: 22 23 24 25, on right: 20
Concrete_Pattern_Name_Qualifier (89)
    on left: 26 27 28 29 30, on right: 18
Concrete_Pattern_Name_Qualifier_C (90)
    on left: 31 32 33, on right: 19
Concrete_Rtl_Spec_S (91)
    on left: 34, on right: 20
Concrete_Rtl_Spec (92)
    on left: 35 36 37, on right: 18
Concrete_Rtl_Spec_C (93)
    on left: 38 39, on right: 19
Concrete_Instantiates_Body_C (94)
    on left: 41, on right: 38 39
$@3 (95)
    on left: 40, on right: 41
Concrete_Instantiates_Body_C2 (96)
    on left: 42 43 44, on right: 41
Concrete_Instantiates_Body (97)
    on left: 45, on right: 34 35 41
Concrete_Overrides_Body (98)
    on left: 46, on right: 36 37
Concrete_Instantiates_Body_Inner (99)
    on left: 47 48 49, on right: 45
Quoted_Id_List (100)
    on left: 50 51, on right: 50 72
Concrete_Overrides_Body_Inner (101)
    on left: 52, on right: 46
Concrete_Instantiates_Body_Out (102)
    on left: 53, on right: 42 43
Concrete_Overrides_Body_Out (103)
    on left: 54, on right: 44
Concrete_Instantiates_Body_Inner_Out (104)
    on left: 55 56, on right: 53
Concrete_Overrides_Body_Inner_Out (105)
    on left: 57, on right: 54
Concrete_Inst_Stmt_List (106)
    on left: 58 59, on right: 21 47 49 52 55 57 58
Stmt (107)
    on left: 60, on right: 15 16
Mode_Stmt (108)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73, on right: 58 59
Attr_Access (109)
    on left: 74 75 76, on right: 61 62 63 64 65
Operand_Access (110)
    on left: 77 78, on right: 60 66 67 75 76 77
Operands (111)
    on left: 79 80 81 82, on right: 47 48 55 56 79 80 81
Operand (112)
    on left: 83 84 85 86 87 88 89 90 91, on right: 81 82
Fixed_Reg_Or_Const (113)
    on left: 92 93 94 95 96 97 98 99, on right: 91
Constraint (114)
    on left: 100, on right: 83 84 86 87 88
Predicate_Or_Mode_List (115)
    on left: 101 102 103 104, on right: 66 67 83 84 86 88 89 92 93
    101 102
Predicate_Or_Mode_With_Brackets (116)
    on left: 105, on right: 101 103
Predicate_Or_Mode (117)
    on left: 106 107, on right: 61 63 102 104 105
Quoted_Id (118)
    on left: 108, on right: 50 51 62 66 67 69 70 71 100 138 149
Concrete_Pattern_Name_List (119)
    on left: 109 110 111 112, on right: 21 22 23 24 25 26 27 28 29
    30 33 34 35 36 37 38 39 42 43 44 109 110
Concrete_Pattern_Name_With_Brackets (120)
    on left: 113 114, on right: 109 111
Concrete_Pattern_Name (121)
    on left: 115 116 117 118 119, on right: 110 112 113 114
Base_Name (122)
    on left: 120, on right: 12 14
Pattern_Name (123)
    on left: 121, on right: 60
List_Pattern (124)
    on left: 122 123 124 125 126 127 128 129 130 131, on right: 6
Code_Mode_Iter (125)
    on left: 132 133, on right: 130
Code_Mode_Attr (126)
    on left: 134 135, on right: 131
ListAsmEntries (127)
    on left: 136 137, on right: 129 136
AsmEntry (128)
    on left: 138, on right: 136 137
ListPID (129)
    on left: 139 140, on right: 128 139
ListEntries (130)
    on left: 141 142 143 144, on right: 123 130 141 143
ListQEntries (131)
    on left: 145 146 147 148, on right: 131 145 146
SQEntryPair (132)
    on left: 149, on right: 143 144 145 147
IEntryPair (133)
    on left: 150 151 152, on right: 139 140
Id_Reg (134)
    on left: 153 154, on right: 150 151 152
QIDList (135)
    on left: 155 156, on right: 124 156
SEntry (136)
    on left: 157, on right: 141 142 146 148
PipedId (137)
    on left: 158 159 160 161 162 163, on right: 127 158 159 160 163


State 0

    0 $accept: . Pattern_List "end of file"

    error          shift, and go to state 1
    CONCRETE       shift, and go to state 2
    ABSTRACT       shift, and go to state 3
    CMD_SPEC_BODY  shift, and go to state 4
    LIST           shift, and go to state 5
    DDDD           shift, and go to state 6

    Pattern_List      go to state 7
    Pattern           go to state 8
    Abstract_Pattern  go to state 9
    Concrete_Pattern  go to state 10
    List_Pattern      go to state 11


State 1

    3 Pattern_List: error . '}'

    '}'  shift, and go to state 12


State 2

   18 Concrete_Pattern: CONCRETE . Concrete_Pattern_Name_Qualifier Concrete_Rtl_Spec
   19                 | CONCRETE . Concrete_Pattern_Name_Qualifier_C Concrete_Rtl_Spec_C
   20                 | CONCRETE . Concrete_Pattern_Name_Qualifier_S Concrete_Rtl_Spec_S
   21                 | CONCRETE . Concrete_Pattern_Name_List '.' REG_CONS '{' Concrete_Inst_Stmt_List '}'

    '_'  shift, and go to state 13
    '*'  shift, and go to state 14
    ID   shift, and go to state 15
    INT  shift, and go to state 16
    '.'  shift, and go to state 17
    '<'  shift, and go to state 18
    ':'  shift, and go to state 19

    Concrete_Pattern_Name_Qualifier_S    go to state 20
    Concrete_Pattern_Name_Qualifier      go to state 21
    Concrete_Pattern_Name_Qualifier_C    go to state 22
    Concrete_Pattern_Name_List           go to state 23
    Concrete_Pattern_Name_With_Brackets  go to state 24
    Concrete_Pattern_Name                go to state 25


State 3

    9 Abstract_Pattern: ABSTRACT . Abstract_Pattern_Name Abstract_Rtl_Spec

    ID  shift, and go to state 26

    Abstract_Pattern_Name  go to state 27


State 4

    7 Pattern: CMD_SPEC_BODY .

    $default  reduce using rule 7 (Pattern)


State 5

  122 List_Pattern: LIST . QUOTED_ID '.' AUTOMATON
  123             | LIST . QUOTED_ID '.' C_ENUM OBRACE ListEntries CBRACE
  124             | LIST . INT '.' BYPASS QIDList
  125             | LIST . QUOTED_ID '.' CPU_UNIT QUOTED_ID
  126             | LIST . QUOTED_ID '.' RESERVATION QUOTED_ID
  127             | LIST . QUOTED_ID '.' RESERVATION '"' PipedId '"'
  128             | LIST . NONAME '.' CONSTANTS OBRACE ListPID CBRACE
  129             | LIST . NONAME '.' ASM_ATTR OBRACE ListAsmEntries CBRACE
  130             | LIST . ID '.' Code_Mode_Iter OBRACE ListEntries CBRACE
  131             | LIST . ID '.' Code_Mode_Attr OBRACE ListQEntries CBRACE

    NONAME     shift, and go to state 28
    ID         shift, and go to state 29
    QUOTED_ID  shift, and go to state 30
    INT        shift, and go to state 31


State 6

    8 Pattern: DDDD .

    $default  reduce using rule 8 (Pattern)


State 7

    0 $accept: Pattern_List . "end of file"
    1 Pattern_List: Pattern_List . Pattern

    "end of file"  shift, and go to state 32
    CONCRETE       shift, and go to state 2
    ABSTRACT       shift, and go to state 3
    CMD_SPEC_BODY  shift, and go to state 4
    LIST           shift, and go to state 5
    DDDD           shift, and go to state 6

    Pattern           go to state 33
    Abstract_Pattern  go to state 9
    Concrete_Pattern  go to state 10
    List_Pattern      go to state 11


State 8

    2 Pattern_List: Pattern .

    $default  reduce using rule 2 (Pattern_List)


State 9

    4 Pattern: Abstract_Pattern .

    $default  reduce using rule 4 (Pattern)


State 10

    5 Pattern: Concrete_Pattern .

    $default  reduce using rule 5 (Pattern)


State 11

    6 Pattern: List_Pattern .

    $default  reduce using rule 6 (Pattern)


State 12

    3 Pattern_List: error '}' .

    $default  reduce using rule 3 (Pattern_List)


State 13

  119 Concrete_Pattern_Name: '_' .

    $default  reduce using rule 119 (Concrete_Pattern_Name)


State 14

  117 Concrete_Pattern_Name: '*' .

    $default  reduce using rule 117 (Concrete_Pattern_Name)


State 15

  115 Concrete_Pattern_Name: ID .

    $default  reduce using rule 115 (Concrete_Pattern_Name)


State 16

  116 Concrete_Pattern_Name: INT .

    $default  reduce using rule 116 (Concrete_Pattern_Name)


State 17

   31 Concrete_Pattern_Name_Qualifier_C: '.' . PEEP2
   32                                  | '.' . SPLIT

    PEEP2  shift, and go to state 34
    SPLIT  shift, and go to state 35


State 18

  113 Concrete_Pattern_Name_With_Brackets: '<' . Concrete_Pattern_Name '>'
  114                                    | '<' . Concrete_Pattern_Name ':' Concrete_Pattern_Name '>'

    '_'  shift, and go to state 13
    '*'  shift, and go to state 14
    ID   shift, and go to state 15
    INT  shift, and go to state 16
    ':'  shift, and go to state 19

    Concrete_Pattern_Name  go to state 36


State 19

  118 Concrete_Pattern_Name: ':' .

    $default  reduce using rule 118 (Concrete_Pattern_Name)


State 20

   20 Concrete_Pattern: CONCRETE Concrete_Pattern_Name_Qualifier_S . Concrete_Rtl_Spec_S

    INSTANTIATES  shift, and go to state 37

    Concrete_Rtl_Spec_S  go to state 38


State 21

   18 Concrete_Pattern: CONCRETE Concrete_Pattern_Name_Qualifier . Concrete_Rtl_Spec

    OVERRIDES     shift, and go to state 39
    INSTANTIATES  shift, and go to state 40

    Concrete_Rtl_Spec  go to state 41


State 22

   19 Concrete_Pattern: CONCRETE Concrete_Pattern_Name_Qualifier_C . Concrete_Rtl_Spec_C

    OVERRIDES     shift, and go to state 42
    INSTANTIATES  shift, and go to state 43

    Concrete_Rtl_Spec_C  go to state 44


State 23

   21 Concrete_Pattern: CONCRETE Concrete_Pattern_Name_List . '.' REG_CONS '{' Concrete_Inst_Stmt_List '}'
   22 Concrete_Pattern_Name_Qualifier_S: Concrete_Pattern_Name_List . '.' CONS
   23                                  | Concrete_Pattern_Name_List . '.' ATTR
   24                                  | Concrete_Pattern_Name_List . '.' MEM_CONS
   25                                  | Concrete_Pattern_Name_List . '.' ADD_CONS
   26 Concrete_Pattern_Name_Qualifier: Concrete_Pattern_Name_List . '.' INSN
   27                                | Concrete_Pattern_Name_List . '.' EXP
   28                                | Concrete_Pattern_Name_List . '.' INSN_RESERV
   29                                | Concrete_Pattern_Name_List . '.' PREDICATE
   30                                | Concrete_Pattern_Name_List . '.' SPECIAL_PREDICATE
   33 Concrete_Pattern_Name_Qualifier_C: Concrete_Pattern_Name_List . '.' INSN_SPLIT
  109 Concrete_Pattern_Name_List: Concrete_Pattern_Name_List . Concrete_Pattern_Name_With_Brackets
  110                           | Concrete_Pattern_Name_List . Concrete_Pattern_Name

    '_'  shift, and go to state 13
    '*'  shift, and go to state 14
    ID   shift, and go to state 15
    INT  shift, and go to state 16
    '.'  shift, and go to state 45
    '<'  shift, and go to state 18
    ':'  shift, and go to state 19

    Concrete_Pattern_Name_With_Brackets  go to state 46
    Concrete_Pattern_Name                go to state 47


State 24

  111 Concrete_Pattern_Name_List: Concrete_Pattern_Name_With_Brackets .

    $default  reduce using rule 111 (Concrete_Pattern_Name_List)


State 25

  112 Concrete_Pattern_Name_List: Concrete_Pattern_Name .

    $default  reduce using rule 112 (Concrete_Pattern_Name_List)


State 26

   10 Abstract_Pattern_Name: ID .

    $default  reduce using rule 10 (Abstract_Pattern_Name)


State 27

    9 Abstract_Pattern: ABSTRACT Abstract_Pattern_Name . Abstract_Rtl_Spec

    EXTENDS    shift, and go to state 48
    OVERRIDES  shift, and go to state 49

    Abstract_Rtl_Spec  go to state 50


State 28

  128 List_Pattern: LIST NONAME . '.' CONSTANTS OBRACE ListPID CBRACE
  129             | LIST NONAME . '.' ASM_ATTR OBRACE ListAsmEntries CBRACE

    '.'  shift, and go to state 51


State 29

  130 List_Pattern: LIST ID . '.' Code_Mode_Iter OBRACE ListEntries CBRACE
  131             | LIST ID . '.' Code_Mode_Attr OBRACE ListQEntries CBRACE

    '.'  shift, and go to state 52


State 30

  122 List_Pattern: LIST QUOTED_ID . '.' AUTOMATON
  123             | LIST QUOTED_ID . '.' C_ENUM OBRACE ListEntries CBRACE
  125             | LIST QUOTED_ID . '.' CPU_UNIT QUOTED_ID
  126             | LIST QUOTED_ID . '.' RESERVATION QUOTED_ID
  127             | LIST QUOTED_ID . '.' RESERVATION '"' PipedId '"'

    '.'  shift, and go to state 53


State 31

  124 List_Pattern: LIST INT . '.' BYPASS QIDList

    '.'  shift, and go to state 54


State 32

    0 $accept: Pattern_List "end of file" .

    $default  accept


State 33

    1 Pattern_List: Pattern_List Pattern .

    $default  reduce using rule 1 (Pattern_List)


State 34

   31 Concrete_Pattern_Name_Qualifier_C: '.' PEEP2 .

    $default  reduce using rule 31 (Concrete_Pattern_Name_Qualifier_C)


State 35

   32 Concrete_Pattern_Name_Qualifier_C: '.' SPLIT .

    $default  reduce using rule 32 (Concrete_Pattern_Name_Qualifier_C)


State 36

  113 Concrete_Pattern_Name_With_Brackets: '<' Concrete_Pattern_Name . '>'
  114                                    | '<' Concrete_Pattern_Name . ':' Concrete_Pattern_Name '>'

    '>'  shift, and go to state 55
    ':'  shift, and go to state 56


State 37

   34 Concrete_Rtl_Spec_S: INSTANTIATES . Concrete_Pattern_Name_List Concrete_Instantiates_Body

    '_'  shift, and go to state 13
    '*'  shift, and go to state 14
    ID   shift, and go to state 15
    INT  shift, and go to state 16
    '<'  shift, and go to state 18
    ':'  shift, and go to state 19

    Concrete_Pattern_Name_List           go to state 57
    Concrete_Pattern_Name_With_Brackets  go to state 24
    Concrete_Pattern_Name                go to state 25


State 38

   20 Concrete_Pattern: CONCRETE Concrete_Pattern_Name_Qualifier_S Concrete_Rtl_Spec_S .

    $default  reduce using rule 20 (Concrete_Pattern)


State 39

   36 Concrete_Rtl_Spec: OVERRIDES . Concrete_Pattern_Name_List '.' INSN Concrete_Overrides_Body CMD_SPEC_BODY
   37                  | OVERRIDES . Concrete_Pattern_Name_List '.' EXP Concrete_Overrides_Body CMD_SPEC_BODY

    '_'  shift, and go to state 13
    '*'  shift, and go to state 14
    ID   shift, and go to state 15
    INT  shift, and go to state 16
    '<'  shift, and go to state 18
    ':'  shift, and go to state 19

    Concrete_Pattern_Name_List           go to state 58
    Concrete_Pattern_Name_With_Brackets  go to state 24
    Concrete_Pattern_Name                go to state 25


State 40

   35 Concrete_Rtl_Spec: INSTANTIATES . Concrete_Pattern_Name_List Concrete_Instantiates_Body CMD_SPEC_BODY

    '_'  shift, and go to state 13
    '*'  shift, and go to state 14
    ID   shift, and go to state 15
    INT  shift, and go to state 16
    '<'  shift, and go to state 18
    ':'  shift, and go to state 19

    Concrete_Pattern_Name_List           go to state 59
    Concrete_Pattern_Name_With_Brackets  go to state 24
    Concrete_Pattern_Name                go to state 25


State 41

   18 Concrete_Pattern: CONCRETE Concrete_Pattern_Name_Qualifier Concrete_Rtl_Spec .

    $default  reduce using rule 18 (Concrete_Pattern)


State 42

   39 Concrete_Rtl_Spec_C: OVERRIDES . '.' IN Concrete_Pattern_Name_List Concrete_Instantiates_Body_C

    '.'  shift, and go to state 60


State 43

   38 Concrete_Rtl_Spec_C: INSTANTIATES . '.' IN Concrete_Pattern_Name_List Concrete_Instantiates_Body_C

    '.'  shift, and go to state 61


State 44

   19 Concrete_Pattern: CONCRETE Concrete_Pattern_Name_Qualifier_C Concrete_Rtl_Spec_C .

    $default  reduce using rule 19 (Concrete_Pattern)


State 45

   21 Concrete_Pattern: CONCRETE Concrete_Pattern_Name_List '.' . REG_CONS '{' Concrete_Inst_Stmt_List '}'
   22 Concrete_Pattern_Name_Qualifier_S: Concrete_Pattern_Name_List '.' . CONS
   23                                  | Concrete_Pattern_Name_List '.' . ATTR
   24                                  | Concrete_Pattern_Name_List '.' . MEM_CONS
   25                                  | Concrete_Pattern_Name_List '.' . ADD_CONS
   26 Concrete_Pattern_Name_Qualifier: Concrete_Pattern_Name_List '.' . INSN
   27                                | Concrete_Pattern_Name_List '.' . EXP
   28                                | Concrete_Pattern_Name_List '.' . INSN_RESERV
   29                                | Concrete_Pattern_Name_List '.' . PREDICATE
   30                                | Concrete_Pattern_Name_List '.' . SPECIAL_PREDICATE
   33 Concrete_Pattern_Name_Qualifier_C: Concrete_Pattern_Name_List '.' . INSN_SPLIT

    INSN               shift, and go to state 62
    EXP                shift, and go to state 63
    INSN_SPLIT         shift, and go to state 64
    INSN_RESERV        shift, and go to state 65
    PREDICATE          shift, and go to state 66
    SPECIAL_PREDICATE  shift, and go to state 67
    ATTR               shift, and go to state 68
    CONS               shift, and go to state 69
    REG_CONS           shift, and go to state 70
    MEM_CONS           shift, and go to state 71
    ADD_CONS           shift, and go to state 72


State 46

  109 Concrete_Pattern_Name_List: Concrete_Pattern_Name_List Concrete_Pattern_Name_With_Brackets .

    $default  reduce using rule 109 (Concrete_Pattern_Name_List)


State 47

  110 Concrete_Pattern_Name_List: Concrete_Pattern_Name_List Concrete_Pattern_Name .

    $default  reduce using rule 110 (Concrete_Pattern_Name_List)


State 48

   12 Abstract_Rtl_Spec: EXTENDS . Base_Name $@1 '{' Abstract_Extends_Body '}'

    ID  shift, and go to state 73

    Base_Name  go to state 74


State 49

   14 Abstract_Rtl_Spec: OVERRIDES . Base_Name $@2 '{' Abstract_Overrides_Body '}'

    ID  shift, and go to state 73

    Base_Name  go to state 75


State 50

    9 Abstract_Pattern: ABSTRACT Abstract_Pattern_Name Abstract_Rtl_Spec .

    $default  reduce using rule 9 (Abstract_Pattern)


State 51
